
Changes in version 2.2 (TBC)

- New Monitor mode for antenna controller
- Avoid using gcc-specific language extensions
- Fixed missing version number in Debian packages


Changes in version 2.0 (10 Dec 2017)

- New logo
- Initial port to Gtk+ 3
- Import transponder data from Satnogs database https://db.satnogs.org/
- Support for multiple TLE sources
- Improved radio and antenna rotator controllers (no application freeze)
- Map can be centered around arbitrary longitude
- Natural sort function for satellite list in module configuration
- Select a satellite in all views
- AOS and LOS signalling in rigctl interface
- Autotrack satellites in a module
- Support for user defined end stops on Azimuth axis
- Experimental gpsd support
- Change frequency and antenna position using the mouse wheel
- Highlight satellites within range in the list view
- Improved handling of decayed satellites
- Fixed application freezing while talking to radios and rotators
- Fixed incorrect program name in desktop files
- Fixed 100% CPU load on manual time adjustment
- Fixed issue controlling Yaesu FT-847
- Fixed old log files not being saved
- Fixed track button in rotator controller having no effect
- Fixed operational status of satellites
- Fixed wrong icon in time controller
- Fixed mising ground track for new satellites
- Fixed show next pass shows the current pass
- Fixed problems with plotting footprints near the poles
- Fixed satellite nickname not escaped for Pango
- Updated translations


Changes in version 1.3 (1 Mar 2011)

- Feature request 2873824: Flip Passes.
- Feature Request 3022617: Malaysia's location.
- Automatically refresh the Sky at a glance view every minute.
- Added more checks with hamlib communications.
- List satellite as available or selected when configuring module.
- Fixed bug 2116691: Leave network connection open.
- Fixed bug 3099314: Rotator Thrashing.
- Fixed bug 2167508: problems in rotator controller.