@@ -4,6 +4,7 @@ Changes in version 2.2 (TBC)
 - New Monitor mode for antenna controller
 - Avoid using gcc-specific language extensions
 - Fixed missing version number in Debian packages
+- Improved satellite search field in module editor
 
 
 Changes in version 2.0 (10 Dec 2017)
